# ASC-bla

./: .buildinfo  .clang-format  .gitignore  CMakeLists.txt  MyModifications.md  README.md  build.sh  genindex.html  intro.html  objects.inv  pyproject.toml  search.html  searchindex.js  setup.py  test_vector.cc  vector.h
ASC_bla/: __init__.py
ASCsoft/: __init__.py
demos/: CMakeLists.txt  demo_vector.cpp
docs/: _config.yml  _toc.yml  conf.py  index.rst  intro.md
docs/WTD/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/latex/: asc-bla.aux  asc-bla.fdb_latexmk  asc-bla.fls  asc-bla.ilg  asc-bla.tex  asc-bla.toc
py_tests/: test_vector.py
src/: bind_bla.cpp  expression.h  expression.hpp  lapack_interface.h  matrix.h  pybind.cpp  shape.h  vector.h  vector.hpp
tests/: CMakeLists.txt  test_lapack.cc  test_matrix.cc  test_vector.cc
